syntax = "proto3";

//Messages

message GetOrderRequest {
    int64 order_id = 1;
}

message GetOrderResponse {
    int32 response_code = 1;
    optional Order order = 2;

    /*

    0 - Success
    1 - Order not found

    */
}


message GetOrdersRequest {
    string user_id = 1;
}

message GetOrdersResponse {
    int32 response_code = 1;
    repeated Order orders = 2;

    /*

    0 - Success
    1 - User not found

    */
}


message CreateOrderRequest {
    string user_id = 1;
}

message CreateOrderResponse {
    int32 response_code = 1;
    optional int64 order_id = 2;

    /*

    0 - Success
    1 - User not found

    */
}

message ValidateOrderRequest {
    int64 order_id = 1
    repeated OrderItem items = 1;
}

message ValidateOrderResponse {
    int32 response_code = 1;
    bool valid = 2;
}

// Order service
service Order {
    rpc GetOrder (GetOrderRequest) returns (GetOrderResponse);
    // Returns the details of a specific order by its ID

    rpc GetOrders(GetOrdersRequest) returns (stream GetOrdersResponse);
    // Retunrs all orders for a given user

    rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
    // Creates a new empty order with no items and sets it as the current order for the user

    rpc ValidateOrder (ValidateOrderRequest) returns (ValidateOrderResponse);
    // Validates an order to check if there is enough stock to complete it
}